tests/snapshots/options__opt_multiple_flags_combined_nth@002.snap
---
source: tests/options.rs
description: "input: items [\"a b c\", \"d e f\"]\noptions: --nth 1,2\nafter:\n  @char 'c'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/2                                                                        0/0"
"> c                                                                             "
cursor: (24, 4)
