tests/snapshots/options__opt_multiple_flags_combined_with_nth@001.snap
---
source: tests/options.rs
description: "input: items [\"a b c\", \"d e f\"]\noptions: --with-nth 1,2"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  d e                                                                           "
"> a b                                                                           "
"  2/2                                                                        0/0"
">                                                                               "
cursor: (24, 3)
