tests/snapshots/options__opt_multiple_flags_interactive@001.snap
---
source: tests/options.rs
description: "input: interactive\noptions: -i --interactive --interactive --cmd echo"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
">                                                                               "
"  1/1                                                                        0/0"
"c>                                                                              "
cursor: (24, 4)
