tests/snapshots/options__opt_multiple_flags_layout_and_reverse.snap
---
source: tests/options.rs
expression: buf + & cursor_pos
---
">                                                                               "
"  2/2                                                                        0/0"
"> a b c                                                                         "
"  d e f                                                                         "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
cursor: (2, 0)
