tests/snapshots/options__opt_multiple_flags_layout_and_reverse@001.snap
---
source: tests/options.rs
description: "input: items [\"a b c\", \"d e f\"]\noptions: --layout default --reverse"
---
">                                                                               "
"  2/2                                                                        0/0"
"> a b c                                                                         "
"  d e f                                                                         "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
cursor: (1, 3)
