tests/snapshots/options__opt_multiple_flags_prompt@001.snap
---
source: tests/options.rs
description: "input: items [\"\"]\noptions: --prompt a --prompt b -p c"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
">                                                                               "
"  1/1                                                                        0/0"
"c                                                                               "
cursor: (24, 2)
