tests/snapshots/options__opt_multiple_flags_reverse.snap
---
source: tests/options.rs
expression: buf + & cursor_pos
---
">                                                                               "
"  1/1                                                                        0/0"
">                                                                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
cursor: (2, 0)
