tests/snapshots/options__opt_multiple_flags_reverse@001.snap
---
source: tests/options.rs
description: "input: items [\"\"]\noptions: --reverse --reverse"
---
">                                                                               "
"  1/1                                                                        0/0"
">                                                                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
cursor: (1, 3)
