tests/snapshots/options__opt_multiple_flags_reverse_and_layout@001.snap
---
source: tests/options.rs
description: "input: items [\"a b c\", \"d e f\"]\noptions: --reverse --layout default"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  d e f                                                                         "
"> a b c                                                                         "
"  2/2                                                                        0/0"
">                                                                               "
cursor: (24, 3)
